[project]
name = "cs267-final-project"
version = "0.0.1"
requires-python = ">=3.12"

dependencies = [
  "clip",
  "diffusers>=0.33.1",
  "image-reward>=1.5",
  "matplotlib>=3.10.1",
  "rich>=14.0.0",
  "torch>=2.6",
  "torchvision>=0.21",
  "transformers>=4.51.3",
  "xformers>=0.0.29.post3",
]

[tool.uv.sources]
torch = [ { index = "pytorch" } ]
torchvision = [ { index = "pytorch" } ]
clip = { git = "https://github.com/openai/CLIP.git" }
xformers = [ { index = "pytorch" } ]

[[tool.uv.index]]
# custom index for pytorch installation
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
